<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/currentAcceleration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/cuttent_acceleration"
        android:editable="false"
        android:singleLine="true"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/maxAcceleration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/max_acceleration"
        android:editable="false"
        android:singleLine="true"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/accelerationX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/acceleration_x"
        android:editable="false"
        android:singleLine="true"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/accelerationY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/acceleration_y"
        android:editable="false"
        android:singleLine="true"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/accelerationZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/acceleration_z"
        android:editable="false"
        android:singleLine="true"
        android:layout_margin="10dp"/>


</LinearLayout>
